Fixed stories taking too much of screen in feed - Fixed stories not taking enough room in profile -Fixed notifications text

--- a/src/scenes/Feed/components/Stories.scss
+++ b/src/scenes/Feed/components/Stories.scss
@@ -2,8 +2,8 @@
 
 .stories-container {
     max-width: 18rem;
-    max-height: calc(100vh - 7.12rem);
-    margin-top: 1.5rem;
+    max-height: calc(100vh - 14rem);
+    margin-top: 1rem;
     padding: .75rem 1rem;
     border: $borderColour 1px solid;
     border-radius: 0.5rem;
