--- a/src/scenes/Profile/Profile.scss
+++ b/src/scenes/Profile/Profile.scss
@@ -109,7 +109,8 @@
 }
 .stories-container {
     grid-column: 2;
-    grid-row: 1/3;
+    grid-row: 1/-1;
+    max-height: calc(100vh - 8rem);
 }
 
 .current-post {
